force-app/main/default/objects/Matter__c/fields/Accept_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Accept_Instructions__c</fullName>
    <label>Accept or Reject Matter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>