force-app/main/default/objects/Matter__c/fields/Access_Type__c.field-meta.xml
<CustomField>
    <fullName>Access_Type__c</fullName>
    <label>Access Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Public</fullName>
                <default>true</default>
                <label>Public</label>
            </value>
            <value>
                <fullName>Private</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>