force-app/main/default/objects/Matter__c/fields/Additional_Processes__c.field-meta.xml
<CustomField>
    <fullName>Additional_Processes__c</fullName>
    <label>Additional Processes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Change of User</fullName>
            </value>
            <value>
                <fullName>Subdivision</fullName>
            </value>
            <value>
                <fullName>Extension of Lease</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>