force-app/main/default/objects/Matter__c/fields/Additional_Processes_required__c.field-meta.xml
<CustomField>
    <fullName>Additional_Processes_required__c</fullName>
    <label>Additional Processes required</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amalgamation</fullName>
            </value>
            <value>
                <fullName>Change of User</fullName>
            </value>
            <value>
                <fullName>Conversion</fullName>
            </value>
            <value>
                <fullName>Extension of Lease</fullName>
            </value>
            <value>
                <fullName>Georeferencing</fullName>
            </value>
            <value>
                <fullName>Registration of Sectional Titles</fullName>
            </value>
            <value>
                <fullName>Subdivision/Partition</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>