force-app/main/default/objects/Matter__c/fields/Admin_Responsible__c.field-meta.xml
<CustomField>
    <fullName>Admin_Responsible__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Admin Responsible</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Matters2</relationshipName>
    <type>Lookup</type>
</CustomField>