force-app/main/default/objects/Matter__c/fields/Adverse_Party__c.field-meta.xml
<CustomField>
    <fullName>Adverse_Party__c</fullName>
    <label>Adverse Party</label>
    <length>255</length>
    <type>Text</type>
</CustomField>