force-app/main/default/objects/Matter__c/fields/Advocate_Responsible__c.field-meta.xml
<CustomField>
    <fullName>Advocate_Responsible__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Advocate Responsible</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Matters</relationshipName>
    <type>Lookup</type>
</CustomField>