force-app/main/default/objects/Matter__c/fields/Advocate_s_Initials__c.field-meta.xml
<CustomField>
    <fullName>Advocate_s_Initials__c</fullName>
    <formula>UPPER(Left(Advocate_Responsible__r.FirstName,1)) + UPPER(Left(Advocate_Responsible__r.Middle_Name__c ,1)) + UPPER(Left(Advocate_Responsible__r.LastName,1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Advocate&apos;s Initials</label>
    <type>Text</type>
</CustomField>