force-app/main/default/objects/Matter__c/fields/Age_in_Months__c.field-meta.xml
<CustomField>
    <fullName>Age_in_Months__c</fullName>
    <formula>FLOOR((TODAY() - DATEVALUE(CreatedDate)) / 30)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age in Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>