force-app/main/default/objects/Matter__c/fields/Agreed_Price_Ksh__c.field-meta.xml
<CustomField>
    <fullName>Agreed_Price_Ksh__c</fullName>
    <label>Agreed Price (Ksh)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>