force-app/main/default/objects/Matter__c/fields/Balance_Ksh__c.field-meta.xml
<CustomField>
    <fullName>Balance_Ksh__c</fullName>
    <formula>Agreed_Price_Ksh__c  -  Deposit_Ksh__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance (Ksh)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>