force-app/main/default/objects/Matter__c/fields/Charges_Mortgages__c.field-meta.xml
<CustomField>
    <fullName>Charges_Mortgages__c</fullName>
    <label>Charges/Mortgages</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>