force-app/main/default/objects/Matter__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Matters (Client)</relationshipLabel>
    <relationshipName>Matters1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>