force-app/main/default/objects/Matter__c/fields/Client_Initial__c.field-meta.xml
<CustomField>
    <fullName>Client_Initial__c</fullName>
    <formula>LEFT(
    SUBSTITUTE(
        SUBSTITUTE(
            SUBSTITUTE(
                Client__r.Name,
                &quot;-&quot;, &quot;&quot;
            ),
            &quot;&amp;&quot;, &quot;&quot;
        ),
        &quot; &quot;, &quot;&quot;
    ),
    1
) &amp; LEFT(
    SUBSTITUTE(
        SUBSTITUTE(
            SUBSTITUTE(
                RIGHT(Client__r.Name, LEN(Client__r.Name) - FIND(&quot; &quot;, Client__r.Name)),
                &quot;-&quot;, &quot;&quot;
            ),
            &quot;&amp;&quot;, &quot;&quot;
        ),
        &quot; &quot;, &quot;&quot;
    ),
    1
)</formula>
    <label>Client Initial</label>
    <type>Text</type>
</CustomField>