force-app/main/default/objects/Matter__c/fields/Client_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Client_Instructions__c</fullName>
    <label>Client Instructions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Conduct due diligence</fullName>
            </value>
            <value>
                <fullName>Confirm intent to proceed after report</fullName>
            </value>
            <value>
                <fullName>Add condition precedent for testing property</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>