force-app/main/default/objects/Matter__c/fields/Client_Instructions_Notes__c.field-meta.xml
<CustomField>
    <fullName>Client_Instructions_Notes__c</fullName>
    <label>Client Instructions Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>