force-app/main/default/objects/Matter__c/fields/Completion_Period__c.field-meta.xml
<CustomField>
    <fullName>Completion_Period__c</fullName>
    <formula>Number_of_Days_Months__c * 30</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Completion Period</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>