force-app/main/default/objects/Matter__c/fields/Conversion_Status__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Status__c</fullName>
    <label>Conversion Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gazetted</fullName>
            </value>
            <value>
                <fullName>Not Gazetted</fullName>
            </value>
            <value>
                <fullName>Converted</fullName>
            </value>
            <value>
                <fullName>Not applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>