force-app/main/default/objects/Matter__c/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <label>County</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mombasa</fullName>
            </value>
            <value>
                <fullName>Kwale</fullName>
            </value>
            <value>
                <fullName>Kilifi</fullName>
            </value>
            <value>
                <fullName>Tana River</fullName>
            </value>
            <value>
                <fullName>Lamu</fullName>
            </value>
            <value>
                <fullName>Taita Taveta</fullName>
            </value>
            <value>
                <fullName>Garissa</fullName>
            </value>
            <value>
                <fullName>Wajir</fullName>
            </value>
            <value>
                <fullName>Mandera</fullName>
            </value>
            <value>
                <fullName>Marsabit</fullName>
            </value>
            <value>
                <fullName>Isiolo</fullName>
            </value>
            <value>
                <fullName>Meru</fullName>
            </value>
            <value>
                <fullName>Tharaka Nithi</fullName>
            </value>
            <value>
                <fullName>Embu</fullName>
            </value>
            <value>
                <fullName>Kitui</fullName>
            </value>
            <value>
                <fullName>Machakos</fullName>
            </value>
            <value>
                <fullName>Makueni</fullName>
            </value>
            <value>
                <fullName>Nyandarua</fullName>
            </value>
            <value>
                <fullName>Nyeri</fullName>
            </value>
            <value>
                <fullName>Kirinyaga</fullName>
            </value>
            <value>
                <fullName>Murang&apos;a</fullName>
            </value>
            <value>
                <fullName>Kiambu</fullName>
            </value>
            <value>
                <fullName>Turkana</fullName>
            </value>
            <value>
                <fullName>West Pokot</fullName>
            </value>
            <value>
                <fullName>Samburu</fullName>
            </value>
            <value>
                <fullName>Trans Nzoia</fullName>
            </value>
            <value>
                <fullName>Uasin Gishu</fullName>
            </value>
            <value>
                <fullName>Elgeyo-Marakwet</fullName>
            </value>
            <value>
                <fullName>Nandi</fullName>
            </value>
            <value>
                <fullName>Baringo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>