force-app/main/default/objects/Matter__c/fields/County_Registry__c.field-meta.xml
<CustomField>
    <fullName>County_Registry__c</fullName>
    <label>County Registry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nairobi Central Registry</fullName>
            </value>
            <value>
                <fullName>Nairobi Land Registry</fullName>
            </value>
            <value>
                <fullName>Mombasa Central Registry</fullName>
            </value>
            <value>
                <fullName>Mombasa Land Registry</fullName>
            </value>
            <value>
                <fullName>Kilifi Registry</fullName>
            </value>
            <value>
                <fullName>Ngong Registry</fullName>
            </value>
            <value>
                <fullName>Naivasha Registry.</fullName>
            </value>
            <value>
                <fullName>Nakuru Registry.</fullName>
            </value>
            <value>
                <fullName>Nyahururu Registry.</fullName>
            </value>
            <value>
                <fullName>Kiambu Registry</fullName>
            </value>
            <value>
                <fullName>Muranga Registry.</fullName>
            </value>
            <value>
                <fullName>Kajiado Registry.</fullName>
            </value>
            <value>
                <fullName>Narok Registry.</fullName>
            </value>
            <value>
                <fullName>Kericho Registry.</fullName>
            </value>
            <value>
                <fullName>Eldoret Registry.</fullName>
            </value>
            <value>
                <fullName>Embu Registry.</fullName>
            </value>
            <value>
                <fullName>Nanyuki Registry</fullName>
            </value>
            <value>
                <fullName>Machakos Registry</fullName>
            </value>
            <value>
                <fullName>Meru Registry</fullName>
            </value>
            <value>
                <fullName>Nyeri Registry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>