force-app/main/default/objects/Matter__c/fields/Current_Month_Year__c.field-meta.xml
<CustomField>
    <fullName>Current_Month_Year__c</fullName>
    <formula>TEXT(MONTH(TODAY())) + &quot;/&quot; + RIGHT(TEXT(YEAR(TODAY())), 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Month &amp; Year</label>
    <type>Text</type>
</CustomField>