force-app/main/default/objects/Matter__c/fields/Date_Opened__c.field-meta.xml
<CustomField>
    <fullName>Date_Opened__c</fullName>
    <label>Date Opened</label>
    <type>Date</type>
</CustomField>