force-app/main/default/objects/Matter__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accounts</fullName>
            </value>
            <value>
                <fullName>Administration</fullName>
            </value>
            <value>
                <fullName>Secretarial</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
                <default>true</default>
                <label>Legal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>