force-app/main/default/objects/Matter__c/fields/Department_Initial__c.field-meta.xml
<CustomField>
    <fullName>Department_Initial__c</fullName>
    <formula>(CASE(TEXT( Department__c ),
&quot;Accounts&quot;,&quot;A&quot;,
&quot;Administration&quot;,&quot;B&quot;,
&quot;Secretarial&quot;,&quot;C&quot;,
&quot;D&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Department Initial</label>
    <type>Text</type>
</CustomField>