force-app/main/default/objects/Matter__c/fields/Deposit_Ksh__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Ksh__c</fullName>
    <label>Deposit (Ksh)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>