force-app/main/default/objects/Matter__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <defaultValue>&quot;1. Give a detailed background or history of the matter. 2. What is the legal analysis of the issues in this matter. 3. Briefly summarize the client instructions with deliverables. 4. What is the timeline for this matter. 5. What are the agreed terms of payment (if any)&quot;</defaultValue>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>