force-app/main/default/objects/Matter__c/fields/Disbursement_Amount__c.field-meta.xml
<CustomField>
    <fullName>Disbursement_Amount__c</fullName>
    <description>Amount from Matter Services</description>
    <label>Disbursement Amount</label>
    <summarizedField>Matter_Item__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Matter_Item__c.Type__c</field>
        <operation>equals</operation>
        <value>Disbursements</value>
    </summaryFilterItems>
    <summaryForeignKey>Matter_Item__c.Matter__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>