force-app/main/default/objects/Matter__c/fields/Disbursement_Invoice_Paid_Amount__c.field-meta.xml
<CustomField>
    <fullName>Disbursement_Invoice_Paid_Amount__c</fullName>
    <label>Disbursement Invoice Paid Amount</label>
    <summarizedField>Invoice__c.Disbursement_Amount_Requested__c</summarizedField>
    <summaryFilterItems>
        <field>Invoice__c.Type__c</field>
        <operation>equals</operation>
        <value>Disbursements</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Invoice__c.Payment_Status__c</field>
        <operation>equals</operation>
        <value>Paid</value>
    </summaryFilterItems>
    <summaryForeignKey>Invoice__c.Matter__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>