force-app/main/default/objects/Matter__c/fields/Duration_of_Matter__c.field-meta.xml
<CustomField>
    <fullName>Duration_of_Matter__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nairobi</fullName>
            </value>
            <value>
                <fullName>Mombasa</fullName>
            </value>
            <value>
                <fullName>Kisumu</fullName>
            </value>
            <value>
                <fullName>Nyeri</fullName>
            </value>
            <value>
                <fullName>Meru</fullName>
            </value>
            <value>
                <fullName>Eldoret</fullName>
            </value>
            <value>
                <fullName>Machakos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>