force-app/main/default/objects/Matter__c/fields/Estimated_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_End_Date__c</fullName>
    <description>Matter Estimated End Date</description>
    <label>Deadline Date</label>
    <type>DateTime</type>
</CustomField>