force-app/main/default/objects/Matter__c/fields/File_No__c.field-meta.xml
<CustomField>
    <fullName>File_No__c</fullName>
    <formula>IF(
  AND(
    NOT(ISBLANK(Parent_Name__c)),
    OR(
      ISPICKVAL(Practice_Area__c, &quot;Real Estate Development (Property File)&quot;),
      ISPICKVAL(Practice_Area__c, &quot;Intellectual Property (Property file)&quot;),
      ISPICKVAL(Practice_Area__c, &quot;Litigation (Property File)&quot;),
      ISPICKVAL(Practice_Area__c, &quot;General File&quot;)
    )
  ),
  Client_Initial__c &amp; &quot;/&quot; &amp;
  Department_Initial__c &amp;
  Client__r.Type_Client_Initial__c &amp;
  TEXT(Parent_Name__r.Physical_File_Number__c) &amp;
  Priority_Initial__c &amp;
  Location_Initial__c &amp; &quot;/&quot; &amp;
  TEXT(Client__r.Client_Number__c),
  
  IF(
    ISPICKVAL(Department__c, &quot;Secretarial&quot;),
    Client_Initial__c &amp; &quot;/&quot; &amp;
    Department_Initial__c &amp;
    Client__r.Type_Client_Initial__c &amp;
    TEXT(Physical_File_Number__c) &amp;
    Priority_Initial__c &amp;
    Location_Initial__c &amp; &quot;/&quot; &amp;
    Client__r.HISA_Client_Number__c,
    
    Client_Initial__c &amp; &quot;/&quot; &amp;
    Department_Initial__c &amp;
    Client__r.Type_Client_Initial__c &amp;
    TEXT(Physical_File_Number__c) &amp;
    Priority_Initial__c &amp;
    Location_Initial__c &amp; &quot;/&quot; &amp;
    TEXT(Client__r.Client_Number__c)
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>File Number</label>
    <type>Text</type>
</CustomField>