force-app/main/default/objects/Matter__c/fields/File_Type__c.field-meta.xml
<CustomField>
    <fullName>File_Type__c</fullName>
    <label>File Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>RBF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>