force-app/main/default/objects/Matter__c/fields/Financier_if_any__c.field-meta.xml
<CustomField>
    <fullName>Financier_if_any__c</fullName>
    <label>Financier: (if any)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>