force-app/main/default/objects/Matter__c/fields/Hisa_Job_No__c.field-meta.xml
<CustomField>
    <fullName>Hisa_Job_No__c</fullName>
    <formula>&quot;S00&quot;+ Client__r.HISA_Client_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hisa Job No</label>
    <type>Text</type>
</CustomField>