force-app/main/default/objects/Matter__c/fields/If_yes_state_amount__c.field-meta.xml
<CustomField>
    <fullName>If_yes_state_amount__c</fullName>
    <label>If yes, state amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>