force-app/main/default/objects/Matter__c/fields/Is_New_Note__c.field-meta.xml
<CustomField>
    <fullName>Is_New_Note__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is New Note?</label>
    <type>Checkbox</type>
</CustomField>