force-app/main/default/objects/Matter__c/fields/Job_Number_without_L__c.field-meta.xml
<CustomField>
    <fullName>Job_Number_without_L__c</fullName>
    <formula>VALUE(RIGHT(Job_No__c, LEN(Job_No__c) - FIND(&quot;L&quot;, Job_No__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Number without L</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>