force-app/main/default/objects/Matter__c/fields/Land_Rates_Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Land_Rates_Payment_Status__c</fullName>
    <label>Land Rates Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Not Paid</fullName>
            </value>
            <value>
                <fullName>To be verified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>