force-app/main/default/objects/Matter__c/fields/Land_Rent_Payable__c.field-meta.xml
<CustomField>
    <fullName>Land_Rent_Payable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Land Rent Payable</label>
    <type>Checkbox</type>
</CustomField>