force-app/main/default/objects/Matter__c/fields/Land_Tenure__c.field-meta.xml
<CustomField>
    <fullName>Land_Tenure__c</fullName>
    <label>Land Tenure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Freehold</fullName>
            </value>
            <value>
                <fullName>Leasehold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>