force-app/main/default/objects/Matter__c/fields/Latest_Note_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Note_Created_Date__c</fullName>
    <label>Latest Note Created Date</label>
    <type>Date</type>
</CustomField>