force-app/main/default/objects/Matter__c/fields/Legal_Amount__c.field-meta.xml
<CustomField>
    <fullName>Legal_Amount__c</fullName>
    <label>Legal Amount</label>
    <summarizedField>Matter_Item__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Matter_Item__c.Type__c</field>
        <operation>equals</operation>
        <value>Legal Fees</value>
    </summaryFilterItems>
    <summaryForeignKey>Matter_Item__c.Matter__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>