force-app/main/default/objects/Matter__c/fields/Legal_Amount_T__c.field-meta.xml
<CustomField>
    <fullName>Legal_Amount_T__c</fullName>
    <formula>IF(
    Amount__c &gt;= 1000000000,
    TEXT(FLOOR(Amount__c / 1000000000)) &amp; &quot;,&quot; &amp; 
    RIGHT(TEXT(FLOOR((Amount__c / 1000000) - (FLOOR(Amount__c / 1000000000) * 1000))), 3) &amp; &quot;,&quot; &amp; 
    RIGHT(TEXT(FLOOR(Amount__c / 1000)), 3) &amp; &quot;,&quot; &amp; 
    RIGHT(TEXT(FLOOR(Amount__c)), 3),
    IF(
        Amount__c &gt;= 1000000,
        TEXT(FLOOR(Amount__c / 1000000)) &amp; &quot;,&quot; &amp; RIGHT(TEXT(FLOOR(Amount__c / 1000)), 3) &amp; &quot;,&quot; &amp; RIGHT(TEXT(FLOOR(Amount__c)), 3),
        IF(
            Amount__c &gt;= 1000,
            TEXT(FLOOR(Amount__c / 1000)) &amp; &quot;,&quot; &amp; RIGHT(TEXT(FLOOR(Amount__c)), 3),
            TEXT(FLOOR(Amount__c))
        )
    )
)
&amp; &quot;.&quot; &amp; LPAD(TEXT((Amount__c - FLOOR(Amount__c)) * 100), 2, &quot;0&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legal Amount T</label>
    <type>Text</type>
</CustomField>