force-app/main/default/objects/Matter__c/fields/Legal_Analysis_Verification__c.field-meta.xml
<CustomField>
    <fullName>Legal_Analysis_Verification__c</fullName>
    <label>Legal Analysis/Verification</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Check if property is within quarry zone</fullName>
            </value>
            <value>
                <fullName>Confirm marital status of vendor</fullName>
            </value>
            <value>
                <fullName>Obtain spousal consent</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>