force-app/main/default/objects/Matter__c/fields/Legal_Fees_Status__c.field-meta.xml
<CustomField>
    <fullName>Legal_Fees_Status__c</fullName>
    <label>Legal Fees Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Invoiced</fullName>
                <default>true</default>
                <label>Not Invoiced</label>
            </value>
            <value>
                <fullName>Invoiced</fullName>
            </value>
            <value>
                <fullName>Invoiced &amp; Paid</fullName>
            </value>
            <value>
                <fullName>Invoiced &amp; Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>