force-app/main/default/objects/Matter__c/fields/Location_Initial__c.field-meta.xml
<CustomField>
    <fullName>Location_Initial__c</fullName>
    <formula>(CASE(TEXT(Client__r.Location_of_Client__c) ,
&quot;Nairobi&quot;,&quot;NB&quot;,
&quot;Mombasa&quot;,&quot;MS&quot;,
&quot;Kisumu&quot;,&quot;KS&quot;,
&quot;Nyeri&quot;,&quot;NY&quot;,
&quot;Meru&quot;,&quot;MR&quot;,
&quot;Eldoret&quot;,&quot;ED&quot;,
&quot;Machakos&quot;,&quot;MK&quot;,
&quot;Thika&quot;, &quot;THK&quot;,
&quot;Naivasha&quot;, &quot;NVS&quot;,
&quot;NY&quot;
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location Initial</label>
    <type>Text</type>
</CustomField>