force-app/main/default/objects/Matter__c/fields/Matter_Closure_Status__c.field-meta.xml
<CustomField>
    <fullName>Matter_Closure_Status__c</fullName>
    <label>Matter Closure Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Matter closure under review</fullName>
                <label>Matter closure under review by Advocate</label>
            </value>
            <value>
                <fullName>Matter under review by Finance</fullName>
            </value>
            <value>
                <fullName>Matter under review by Partner</fullName>
            </value>
            <value>
                <fullName>Matter under review by Registrar</fullName>
            </value>
            <value>
                <fullName>Matter Closure Approved</fullName>
            </value>
            <value>
                <fullName>Matter closure rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>