force-app/main/default/objects/Matter__c/fields/Matter_Service__c.field-meta.xml
<CustomField>
    <fullName>Matter_Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Matter Service</label>
    <referenceTo>Matter_Item__c</referenceTo>
    <relationshipLabel>Matters</relationshipLabel>
    <relationshipName>Matters</relationshipName>
    <type>Lookup</type>
</CustomField>