force-app/main/default/objects/Matter__c/fields/Matter_Template__c.field-meta.xml
<CustomField>
    <fullName>Matter_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Matter Template</label>
    <referenceTo>Matter_Template__c</referenceTo>
    <relationshipLabel>Matters</relationshipLabel>
    <relationshipName>Matters</relationshipName>
    <type>Lookup</type>
</CustomField>