force-app/main/default/objects/Matter__c/fields/Matter_Type__c.field-meta.xml
<CustomField>
    <fullName>Matter_Type__c</fullName>
    <label>Matter Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Conveyancing</fullName>
            </value>
            <value>
                <fullName>Conversion</fullName>
            </value>
            <value>
                <fullName>Subdivision</fullName>
            </value>
            <value>
                <fullName>Amalgamation</fullName>
            </value>
            <value>
                <fullName>Change of User</fullName>
            </value>
            <value>
                <fullName>Extension Of Lease</fullName>
            </value>
            <value>
                <fullName>Land Rates &amp; Rent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>